--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "jest": "26.6.3",
     "jsdoc": "^3.6.7",
     "lint-staged": "10.5.4",
+    "morgan": "^1.10.0",
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
     "supertest": "6.1.3",
