--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
     "supertest": "6.1.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "winston": "^3.3.3"
   }
 }
