--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "express": "4.17.1",
     "swagger-ui-express": "4.1.6",
     "uuid": "^8.3.2",
-    "yamljs": "0.3.0"
+    "yamljs": "0.3.0",
+    "http-status-codes": "^2.1.4",
+    "typescript": "^4.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
@@ -77,11 +80,8 @@
     "jest": "26.6.3",
     "jsdoc": "^3.6.7",
     "lint-staged": "10.5.4",
-    "morgan": "^1.10.0",
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
-    "supertest": "6.1.3",
-    "typescript": "^4.3.2",
-    "winston": "^3.3.3"
+    "supertest": "6.1.3"
   }
 }
