--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "cross-env": "7.0.3",
     "dotenv": "9.0.0",
     "express": "4.17.1",
-    "swagger-ui-express": "4.1.6",
-    "uuid": "^8.3.2",
-    "yamljs": "0.3.0",
     "http-status-codes": "^2.1.4",
+    "swagger-ui-express": "4.1.6",
+    "ts-node": "^10.0.0",
+    "tsc": "^2.0.3",
     "typescript": "^4.3.2",
-    "winston": "^3.3.3"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "yamljs": "0.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
