--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '1'
+version: '3'
 services: 
     node: 
-        build: 
+        build: .
         ports: 
             - ${PORT}:${PORT}
         depends_on:
@@ -11,7 +11,7 @@ services:
     postgres:
         build: ./database
         ports: 
-            - ${POSTGRES_PORT}:${POSTGRES_PORT}
+            - 5432:5432
         environment: 
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
