--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ JWT_SECRET_KEY=secret-key
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
+POSTGRES_PASSWORD=trytoread
+POSTGRES_DB=trello
+POSTGRES_HOST=localhost
