--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,18 @@ services:
             - ${PORT}:${PORT}
         depends_on:
             - postgres
+        command: ["npm", "start"]
         environment:
-            - PORT=${PORT}
+            PORT: ${PORT}
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+            DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
         image: okrypets/nodejs
         volumes: 
             - ./src:/usr/src/app/src
             - ./logs:/usr/src/app/logs
+            - node_modules:/usr/node/app/node_modules
         networks: 
             - frontend
             - backend
@@ -19,7 +25,7 @@ services:
     postgres:
         build: ./database
         ports: 
-            - ${POSTGRES_PORT}:${POSTGRES_PORT}
+            - 5433:${POSTGRES_PORT}
         environment: 
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -29,13 +35,12 @@ services:
         networks: 
             - backend
         volumes:  
-            - pgdata:/var/lib/postgresql/data
+            - ./pgdata:/var/lib/postgresql/data
         restart: on-failure
 volumes: 
     logs:
-        external: true
     pgdata:
-        external: true
+    node_modules:
 networks:
     frontend: 
         name: frontend
