--- a/.env
+++ b/.env
@@ -8,4 +8,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=trytoread
 POSTGRES_DB=trello
-POSTGRES_HOST=localhost
+POSTGRES_HOST=host.docker.internal
+
+// host.docker.internal
