--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
     "doc": "jsdoc -d docs -c config.json src/server.ts",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
-    "migration:generate": "npm run typeorm -- migration:generate --config src/config/ormconfig.json --connection  --name ",
-    "migration:run": "npm run typeorm -- migration:run"
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/ormconfig.ts",
+    "migration:generate": "npm run typeorm:cli -- migration:generate -n"
   },
   "keywords": [
     "rs",
