fix: run migration and generate migration

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=trytoread
 POSTGRES_DB=trello
-POSTGRES_HOST=host.docker.internal
+POSTGRES_HOST=localhost
 
 // host.docker.internal
