--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "allowJs": true,
     "outDir": "build",
-    "rootDir": "src",
+    "rootDir": "src", 
     "downlevelIteration": false,
     "strict": true,
     "noUnusedLocals": true,
@@ -18,12 +18,13 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"]
   },
   "exclude": [
-    "../node_modules/"
+    "node_modules/"
   ],
   "include": [
-    "./src/"
+    "./src/**/*.ts"
   ]
 }
