--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=trytoread
 POSTGRES_DB=trello
-POSTGRES_HOST=host.docker.internal
 
-// host.docker.internal
+// NOTE: to run locally use this ones:
+
+POSTGRES_HOST=localhost
+
+// NOTE: to run docker-compose up use this ones:
+
+POSTGRES_HOST=host.docker.internal
