--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     ]
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.2",
+    "bcrypt": "^5.0.1",
     "cross-env": "7.0.3",
     "dotenv": "9.0.0",
     "express": "4.17.1",
@@ -65,6 +67,7 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.2",
     "@types/swagger-ui-express": "^4.1.2",
