--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dotenv": "9.0.0",
     "express": "4.17.1",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "swagger-ui-express": "4.1.6",
     "ts-node": "^10.0.0",
