--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,41 +4,31 @@ services:
         build: .
         ports: 
             - ${PORT}:${PORT}
+        container_name: node
         depends_on:
             - postgres
-        command: ["npm", "start"]
+        environment:
+            - PORT=${PORT}    
         image: okrypets/nodejs
         volumes: 
-            - ./src:/usr/src/app/src
-            - ./logs:/usr/src/app/logs
-            - node_modules:/usr/node/app/node_modules
+            - .:/usr/app
         networks: 
-            - frontend
-            - backend
+            - network
         restart: on-failure
     postgres:
         build: ./database
+        container_name: postgres
+        restart: on-failure
         ports: 
-            - 5433:${POSTGRES_PORT}
-        environment: 
-            POSTGRES_USER: ${POSTGRES_USER}
-            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-            POSTGRES_DB: ${POSTGRES_DB}
-            PGDATA: /var/lib/postgresql/data
+            - ${POSTGRES_PORT_HOST}:${POSTGRES_PORT}
         image: okrypets/postgres
         networks: 
-            - backend
+            - network
         volumes:  
             - ./pgdata:/var/lib/postgresql/data
-        restart: on-failure
-volumes: 
-    logs:
-    pgdata:
-    node_modules:
 networks:
-    frontend: 
-        name: frontend
+    network: 
         driver: bridge
-    backend: 
-        name: backend
-        driver: bridge
+volumes: 
+    pgdata:
+    logs:
