--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
