fix: run app in docker-compose up

--- a/docker.env
+++ b/docker.env
@@ -9,5 +9,4 @@ POSTGRES_PORT_HOST=5433
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=trytoread
 POSTGRES_DB=trello
-POSTGRES_HOST=localhost
-POSTGRES_HOST_DOCKER=host.docker.internal
+POSTGRES_HOST=host.docker.internal
