--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,26 @@ services:
         depends_on:
             - postgres
         environment:
-            - PORT=${PORT}    
+            - PORT=${PORT}             
         image: okrypets/nodejs
         volumes: 
             - .:/usr/app
         networks: 
             - network
         restart: on-failure
+        env_file:
+            - docker.env
     postgres:
         build: ./database
         container_name: postgres
         restart: on-failure
         ports: 
             - ${POSTGRES_PORT_HOST}:${POSTGRES_PORT}
+        environment: 
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+            PGDATA: /var/lib/postgresql/data
         image: okrypets/postgres
         networks: 
             - network
