--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "rs-rest-service-starter",
-  "version": "1.0.0",
+  "name": "nest-app",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": ""
   },
+  "author": "",
+  "private": true,
   "type": "commonjs",
   "description": "REST service starter for RS School",
-  "main": "src/server.ts",
   "scripts": {
-    "build": "tsc",
-    "dev": "nodemon -L src/",
-    "start": "ts-node src/server.ts",
-    "start:dev": "nest start",
-    "lint": "eslint --ext .js,.ts --fix src/",
-    "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
-    "doc": "jsdoc -d docs -c config.json src/server.ts",
     "typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/ormconfig.ts",
     "migration:generate": "npm run typeorm migration:generate -- -n",
     "migration:run": "npm run typeorm -- migration:run"
@@ -51,11 +58,14 @@
     ]
   },
   "dependencies": {
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.15",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.6",
     "@nestjs/cli": "^7.6.0",
-    "@nestjs/common": "^7.6.18",
     "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.18",
-    "@nestjs/platform-express": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/platform-fastify": "^7.6.18",
     "@nestjs/swagger": "^4.8.1",
@@ -78,34 +88,43 @@
     "yamljs": "0.3.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.12",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.0",
+    "@nestjs/testing": "^7.6.15",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/node": "^14.14.36",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.0.18",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.2.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.2",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@types/yamljs": "^0.2.31",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
     "chai": "4.3.4",
     "debug": "4.3.1",
     "dirty-chai": "2.0.1",
-    "eslint": "7.2.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
     "husky": "4.3.8",
-    "jest": "26.6.3",
     "jsdoc": "^3.6.7",
     "lint-staged": "10.5.4",
     "nodemon": "2.0.7",
-    "prettier": "2.2.1",
-    "snyk": "^1.630.0",
-    "supertest": "6.1.3"
+    "snyk": "^1.630.0"
   }
 }
