--- a/package.json
+++ b/package.json
@@ -54,18 +54,15 @@
     ]
   },
   "dependencies": {
+    "@nestjs/cli": "^7.6.0",
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/typeorm": "^7.1.5",
     "@nestjs/platform-fastify": "^7.6.18",
-    "@nestjs/swagger": "^4.8.1",
     "@nestjs/schematics": "^7.3.1",
+    "@nestjs/swagger": "^4.8.1",
+    "@nestjs/typeorm": "^7.1.5",
     "@types/jsonwebtoken": "^8.5.2",
     "bcrypt": "^5.0.1",
     "cross-env": "7.0.3",
@@ -73,7 +70,11 @@
     "express": "4.17.1",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "nest-winston": "^1.5.0",
     "pg": "^8.6.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.6",
     "swagger-ui-express": "4.1.6",
     "ts-node": "^10.0.0",
     "tsc": "^2.0.3",
@@ -87,40 +88,41 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.36",
+    "@types/on-finished": "^2.3.1",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/uuid": "^8.3.0",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "chai": "4.3.4",
+    "debug": "4.3.1",
+    "dirty-chai": "2.0.1",
     "eslint": "^7.22.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "4.3.8",
     "jest": "^26.6.3",
+    "jsdoc": "^3.6.7",
+    "lint-staged": "10.5.4",
+    "nodemon": "2.0.7",
     "prettier": "^2.2.1",
+    "snyk": "^1.630.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3",
-    "@types/bcrypt": "^5.0.0",
-    "@types/mocha": "^8.2.2",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/uuid": "^8.3.0",
-    "@types/yamljs": "^0.2.31",
-    "chai": "4.3.4",
-    "debug": "4.3.1",
-    "dirty-chai": "2.0.1",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-node": "11.1.0",
-    "husky": "4.3.8",
-    "jsdoc": "^3.6.7",
-    "lint-staged": "10.5.4",
-    "nodemon": "2.0.7",
-    "snyk": "^1.630.0"
+    "typescript": "^4.2.3"
   }
 }
