feat: add artilery and fastify

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ POSTGRES_PASSWORD=trytoread
 POSTGRES_DB=trello
 POSTGRES_HOST=localhost
 POSTGRES_HOST_DOCKER=host.docker.internal
+USE_FASTIFY=false
